Fix: Fix book carousel overlapping side menu in mobile view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,7 +72,7 @@ header {
   right: 0;
   height: var(--headerHeight);
   background-color: var(--darkGrayBlue);
-  z-index: 1;
+  z-index: 2;
 }
 
 main {
